--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第13章 引用.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第13章 引用.md
@@ -28,28 +28,28 @@
 
 引用的基本操作是**分配（allocation）**、**解引用（dereferencing）**和**赋值（assignment）**。要分配一个引用，我们使用 $ref$ 操作符，提供新单元的初始值。
 
-```plaintext
+```haskell
 r = ref 5;
 ⊢ r : Ref Nat
 ```
 
 类型检查器的响应表明，$r$ 的值是一个引用，指向一个总是包含数字的单元。要读取该单元的当前值，我们使用解引用操作符 $!$。
 
-```plaintext
+```haskell
 !r;
 ⊢ 5 : Nat
 ```
 
 要改变存储在该单元中的值，我们使用赋值操作。
 
-```plaintext
+```haskell
 r := 7;
 ⊢ unit : Unit
 ```
 
 **注意**：赋值的结果是平凡的 $unit$ 值（参见第11.2节）。如果我们再次解引用 $r$，我们会看到更新后的值。
 
-```plaintext
+```haskell
 !r;
 ⊢ 7 : Nat
 ```
@@ -58,14 +58,14 @@ r := 7;
 
 赋值表达式的结果是平凡的值 $unit$，这与第11.3节定义的序列化符号非常契合，允许我们写作：
 
-```plaintext
+```haskell
 (r := succ(!r); !r);
 ⊢ 8 : Nat
 ```
 
 而不是等价但更繁琐的：
 
-```plaintext
+```haskell
 (λ_:Unit. !r) (r := succ(!r));
 ⊢ 9 : Nat
 ```
@@ -74,7 +74,7 @@ r := 7;
 
 注意，如果第二个表达式也是一个赋值，那么整个序列的类型将是 $Unit$，因此我们可以合法地将其放在另一个 $;$ 的左侧，构建更长的赋值序列：
 
-```plaintext
+```haskell
 (r := succ(!r); r := succ(!r); r := succ(!r); r := succ(!r); !r);
 ⊢ 13 : Nat
 ```
@@ -83,33 +83,33 @@ r := 7;
 
 牢记绑定到 $r$ 的**引用**与该引用指向的存储器中的**单元**之间的区别是很重要的。
 
-```plaintext
+```haskell
 [图示：r 指向一个值为 13 的存储单元]
 ```
 
 如果我们复制 $r$，例如将其值绑定到另一个变量 $s$：
 
-```plaintext
+```haskell
 s = r;
 ⊢ s : Ref Nat
 ```
 
 那么被复制的只是引用（图中的箭头），而不是单元：
 
-```plaintext
+```haskell
 [图示：r 和 s 都指向值为 13 的同一存储单元]
 ```
 
 我们可以通过对 $s$ 进行赋值来验证这一点：
 
-```plaintext
+```haskell
 s := 82;
 ⊢ unit : Unit
 ```
 
 并通过 $r$ 读取它：
 
-```plaintext
+```haskell
 !r;
 ⊢ 82 : Nat
 ```
@@ -124,7 +124,7 @@ s := 82;
 
    - $ref 0$ 被计算两次，产生两个不同的引用，分别指向两个不同的存储单元，初始值都是 $0$。
 
-   ```plaintext
+   ```haskell
    [图示]
    a = { l1, l2 }
    l1 指向 0
@@ -135,7 +135,7 @@ s := 82;
 
    - $ref 0$ 只被计算一次，产生一个引用 $l$，传递给函数，函数返回 ${x, x}$，即 ${l, l}$，两个字段都引用同一个存储单元。
 
-   ```plaintext
+   ```haskell
    [图示]
    l 指向 0
    b = { l, l }
@@ -149,7 +149,7 @@ s := 82;
 
 当然，**别名**也是引用有用的一个重要部分。特别地，它允许我们在程序的不同部分之间建立“隐式的通信通道”——**共享状态**。例如，假设我们定义一个引用单元和两个操作其内容的函数：
 
-```plaintext
+```haskell
 c = ref 0;
 ⊢ c : Ref Nat
 
@@ -162,21 +162,21 @@ decc = λx:Unit. (c := pred(!c); !c);
 
 调用 $incc$：
 
-```plaintext
+```haskell
 incc unit;
 ⊢ 1 : Nat
 ```
 
 会导致对 $c$ 的更改，这可以通过调用 $decc$ 来观察：
 
-```plaintext
+```haskell
 decc unit;
 ⊢ 0 : Nat
 ```
 
 如果我们将 $incc$ 和 $decc$ 一起打包到一个记录中：
 
-```plaintext
+```haskell
 o = { i = incc, d = decc };
 ⊢ o : { i: Unit → Nat, d: Unit → Nat }
 ```
@@ -187,27 +187,27 @@ o = { i = incc, d = decc };
 
 引用单元不仅可以包含一个数字：上述的基本操作允许我们创建对任何类型值的引用，包括函数。例如，我们可以使用对函数的引用来给出一个（不是很高效的）数字数组（arrays of numbers）的实现，如下所示。将 $NatArray$ 定义为类型 $Ref (Nat → Nat)$。
 
-```plaintext
+```haskell
 NatArray = Ref (Nat → Nat);
 ```
 
 要构建一个新的数组，我们分配一个引用单元，并填充一个函数，当给定一个索引时，总是返回 $0$。
 
-```plaintext
+```haskell
 newarray = λ_:Unit. ref (λn:Nat. 0);
 ⊢ newarray : Unit → NatArray
 ```
 
 要查找数组的一个元素，我们简单地将函数应用于所需的索引。
 
-```plaintext
+```haskell
 lookup = λa:NatArray. λn:Nat. (!a) n;
 ⊢ lookup : NatArray → Nat → Nat
 ```
 
 编码的有趣部分是更新函数。它接受一个数组、一个索引和要存储在该索引的新值，通过创建（并存储在引用中）一个新函数来完成工作：当它被要求提供这个索引的值时，返回提供给 $update$ 的新值；对于所有其他索引，将查找传递给之前存储在引用中的函数。
 
-```plaintext
+```haskell
 update = λa:NatArray. λm:Nat. λv:Nat.
           let oldf = !a in
           a := (λn:Nat. if equal m n then v else oldf n);
@@ -216,7 +216,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 **练习 13.1.2** [««]：如果我们将 $update$ 定义得更紧凑，如下所示：
 
-```plaintext
+```haskell
 update = λa:NatArray. λm:Nat. λv:Nat.
           a := (λn:Nat. if equal m n then v else (!a) n);
 ```
@@ -483,7 +483,7 @@ $$
 
 - 我们可以定义：
 
-  ```plaintext
+  ```haskell
   l1 = ref (\lambda x:\text{Nat}.\ (!l2)\ x);
   l2 = ref (\lambda x:\text{Nat}.\ (!l1)\ x);
   ```
